--- a/Vote_tracker.css
+++ b/Vote_tracker.css
@@ -1,68 +1,57 @@
 h1{
-font-family: cursive;
-text-align: center;
-background-color: red;
-color: white;
+  font-family: cursive;
+  text-align: center;
+  background-color: red;
+  color: white;
 }
 h2{
-font-family: cursive;
-background-color: grey;
-color: white;
-margin-top: 300px;
-
-
+  font-family: cursive;
+  background-color: grey;
+  color: white;
 }
-#randomImage{
+#images-container{
   display:flex;
+  justify-content: space-around;
 }
 img{
   height: 400px;
   width:200px;
 }
-@@media  {
 
-}
-.meter {
-	height: 10px;
-	position: relative;
-	background: #EEEEEE;
-	-moz-border-radius: 25px;
-	-webkit-border-radius: 25px;
-	border-radius: 25px;
-	padding: 10px;
-	box-shadow: 10px 10px;
-  margin-top: 50px;
-}
-
-
-
-.meter {
-	height: 20px;  /* Can be anything */
-	position: relative;
-	background: #555;
-	-moz-border-radius: 25px;
-	-webkit-border-radius: 25px;
-	border-radius: 25px;
-	padding: 10px;
-	box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
-}
-
-.meter > span {
-  display: flex;
+#busmall{
   height: 100%;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  width: 100%;
+}
+
+p{
+  font-family: 'Ranga', cursive;
+}
+
+footer{
+  background-color: grey;
+  color:white;
+  text-align:center;
+}
+#myProgress {
+  width: 100%;
+  background-color: grey;
+}
+#myBar {
+  width: 15%;
+  height: 30px;
+  background-color: red;
+  text-align: center;
+  color: white
+}
+button{
   background-color:red;
-  background-image: linear-gradient(
-    center bottom,
-    rgb(43,194,83) 37%,
-    rgb(84,240,84) 69%
-  );
-  box-shadow:
-    inset 0 2px 9px  rgba(255,255,255,0.3),
-    inset 0 -2px 6px rgba(0,0,0,0.4);
-  position: relative;
-  overflow: hidden;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px 5px;
+  cursor: pointer;
 }
